2008-12-12  Claudio Saavedra  <csaavedra@igalia.com>

	Based on a patch by Christian Dywan (christian@imendio.com)

	* src/hildon-gtk.c: (+hildon_gtk_hscale_new): Create a hildonized style
	GtkHScale.
	* src/hildon-gtk.h: Add definition.

	Fixes: NB#93744 (Tapping should jump to location on GtkScale)

2008-12-11  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-button.c: (hildon_picker_button_init),
	(hildon_picker_button_new): Set the HildonButton::style property
	in the init method, to propagate the value to the derived classes.

2008-12-11  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-button.c: (hildon_button_class_init): Do not make
	the "style" property a construct property.

2008-12-11  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-wizard-dialog.h
	* src/hildon-wizard-dialog.c
	(hildon_wizard_dialog_set_forward_page_func)
	* src/hildon-pannable-area.h
	* src/hildon-pannable-area.c
	(hildon_pannable_area_set_size_request_policy):
	Documentation fixes.

2008-12-11  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-sections.txt: Fixed warning about unused symbols.

2008-12-11  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-sections.txt: Added sections file.

2008-12-11  Claudio Saavedra  <csaavedra@igalia.com>

	* AUTHORS: Updates.
	* src/*.[ch]: Updates.

2008-12-10  Thomas Thurman  <thomas.thurman@collabora.co.uk>

        * examples/hildon-progress-indicator-example.c: new file
        * examples/Makefile.am: include the new example program

2008-12-10  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-wizard-dialog.c (destroy): Fix compilation warning

2008-12-09  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post release version bump
	* debian/changelog: version bump

2008-12-09  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.28]

	* NEWS: updates
	* configure.ac: bump version
	* debian/changelog: updates
	* debian/control: bump gtk+ dependency
